// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CAccordionHeader customize 1`] = `
<div>
  <div
    class="accordion-header bazinga"
  >
    Test
  </div>
</div>
`;

exports[`loads and displays CAccordionHeader component 1`] = `
<div>
  <div
    class="accordion-header"
  >
    Test
  </div>
</div>
`;
